--- a/css/styles.css
+++ b/css/styles.css
@@ -27,7 +27,10 @@ img {
   max-width: 100%;
   height: auto;
 }
-
+input {
+  margin: 0;
+  padding: 0;
+}
 .container {
   width: 100%;
   max-width: 1158px;
@@ -121,7 +124,7 @@ img {
   color: #404bbf;
 }
 
-/*--------- main section one */
+/*-------------------------- main section one ------------------*/
 .solution {
   padding: 188px 0;
   background-color: #2e2f42;
@@ -172,7 +175,7 @@ img {
   background-color: #404bbf;
 }
 
-/* -----------section two  */
+/* -----------section two ---------------- */
 .feature {
   padding: 120px 0;
 }
@@ -231,7 +234,7 @@ img {
   letter-spacing: 0.02em;
 }
 
-/* -----------section three team */
+/* -----------section three team---------------- */
 .team {
   padding: 120px 0;
   background-color: #f4f4fd;
@@ -320,7 +323,7 @@ img {
   margin: 0 auto;
 }
 
-/* --------section four */
+/* --------section four---------------- */
 .portfolio {
   padding-top: 120px;
   padding-bottom: 120px;
@@ -402,7 +405,7 @@ img {
   letter-spacing: 0.02em;
 }
 
-/*-------------------- footer */
+/*-------------------- footer--------------- */
 .footer {
   padding: 100px 0;
   background: #2e2f42;
@@ -436,6 +439,9 @@ img {
 .container-footer {
   display: flex;
   align-items: baseline;
+}
+.container-foot-social{
+  margin-right: 80px;
 }
 
 .foter-part-one {
@@ -480,4 +486,243 @@ img {
 }
 .foot-soce-icone {
   fill: #f4f4fd;
+}
+.subsc-form {
+  display: flex;
+  align-items: center;
+  justify-content:space-between;
+}
+
+.subsc-text {
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  margin-bottom: 16px;
+}
+
+.subst-input {
+    width: 264p;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid #FFF;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15)
+    outline: transparent;
+  background-color: transparent;
+  padding: 0 16px;
+  margin-right: 24px;
+    }
+
+    .subst-input::placeholder{
+color: #FFF;
+font-size: 12px;
+font-weight: 400;
+line-height: 2;
+letter-spacing: 0.04em;
+    }
+
+.subsc-btn {
+   color: #fff;
+  font-family: inherit;
+  font-size:16px ;
+  font-weight:500 ;
+  line-height:1.5;
+  letter-spacing:0.04em;
+  background-color: #4d5ae5;
+  border-radius: 4px;
+  cursor: pointer;
+  width:165px;
+  height:40px;
+padding: 0 24px;
+  border: none;
+ display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+
+  }
+
+
+/* -------------------------modal----------------- */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(46, 47, 66, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  position: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.is-open {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 408px;
+  min-height: 584px;
+  transform: translate(-50%, -50%) scale(1);
+  background-color: #fcfcfc;
+  border-radius: 4px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 72px 24px 24px 24px;
+}
+
+.modal-close-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  padding: 0;
+  cursor: pointer;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #e7e9fc;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  background-color: #404bbf;
+  border: none;
+}
+
+.modal-cllose-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close-btn:hover > .modal-cllose-icon,
+.modal-close-btn:focus > .modal-cllose-icon {
+  fill: #fff;
+}
+.modal-title {
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-align: center;
+  margin-bottom: 16px;
+  color: #2e2f42;
+}
+.modal-field {
+  margin-bottom: 8px;
+}
+.input-modal-wrap {
+  position: relative;
+}
+
+.input-form-modal {
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  color: ;
+  outline: transparent;
+  background-color: transparent;
+  padding-left: 38px;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.input-form-modal:hover,
+.input-form-modal:focus {
+  border: 1px solid #4d5ae5;
+}
+
+.input-form-modal:hover + .form-icon,
+.input-form-modal:focus + .form-icon {
+  fill: #4d5ae5;
+}
+
+.modal-lable {
+  display: block;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  color: #8e8f99;
+  margin-bottom: 4px;
+}
+.modal-field {
+  margin-bottom: 8px;
+}
+.form-icon {
+  position: absolute;
+  left: -126px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.model-coment-text {
+  width: 100%;
+  height: 120px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  outline: transparent;
+  background-color: transparent;
+  padding: 8px 16px;
+  resize: none;
+}
+.check-text {
+  color: #8e8f99;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  display: flex;
+  align-items: center;
+  margin-top: 16px;
+  margin-bottom: 24px;
+}
+.check-text a {
+  color: #4d5ae5;
+  line-height: 1.33;
+  text-decoration: underline;
+  margin-left: 8px;
+}
+.check-text span {
+  width: 16px;
+  height: 16px;
+  border-radius: 2px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  margin-right: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  fill: none;
+}
+
+.check-input:checked + .check-text span {
+  background-color: #404bbf;
+  border: none;
+}
+
+.model-send-btn {
+  display: block;
+  color: #fff;
+  font-family: inherit;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  background-color: #4d5ae5;
+  border-radius: 4px;
+  cursor: pointer;
+  margin: 0 auto;
+  min-width: 169px;
+  height: 56px;
+  border: none;
+  margin-top: 24px;
 }
