--- a/css/styles.css
+++ b/css/styles.css
@@ -180,7 +180,7 @@ input {
   padding: 120px 0;
 }
 
-.feature-title-hero {
+.visually-hidden {
   position: absolute;
   width: 1px;
   height: 1px;
@@ -440,7 +440,7 @@ input {
   display: flex;
   align-items: baseline;
 }
-.container-foot-social{
+.container-foot-social {
   margin-right: 80px;
 }
 
@@ -487,10 +487,10 @@ input {
 .foot-soce-icone {
   fill: #f4f4fd;
 }
+
 .subsc-form {
   display: flex;
-  align-items: center;
-  justify-content:space-between;
+  gap: 24px;
 }
 
 .subsc-text {
@@ -503,47 +503,47 @@ input {
 }
 
 .subst-input {
-    width: 264p;
+  width: 264p;
   height: 40px;
-  border-radius: 4px;
-  border: 1px solid #FFF;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15)
-    outline: transparent;
+  border: 1px solid #fff;
   background-color: transparent;
-  padding: 0 16px;
-  margin-right: 24px;
-    }
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+  border-radius: 4px;
+  padding-left: 16px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
 
-    .subst-input::placeholder{
-color: #FFF;
-font-size: 12px;
-font-weight: 400;
-line-height: 2;
-letter-spacing: 0.04em;
-    }
+.subst-input::placeholder {
+  color: #fff;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.04em;
+}
 
 .subsc-btn {
-   color: #fff;
+  min-width: 165px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-family: inherit;
-  font-size:16px ;
-  font-weight:500 ;
-  line-height:1.5;
-  letter-spacing:0.04em;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   background-color: #4d5ae5;
   border-radius: 4px;
   cursor: pointer;
-  width:165px;
-  height:40px;
-padding: 0 24px;
+  padding: 0 24px;
   border: none;
- display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 16px;
-
-  }
-
-
+}
+.icon-send-footer {
+  margin-left: 16px;
+}
 /* -------------------------modal----------------- */
 .backdrop {
   position: fixed;
@@ -576,6 +576,8 @@ padding: 0 24px;
   border-radius: 4px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   padding: 72px 24px 24px 24px;
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
 }
 
 .modal-close-btn {
@@ -631,20 +633,15 @@ padding: 0 24px;
   height: 40px;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  color: ;
   outline: transparent;
   background-color: transparent;
   padding-left: 38px;
-  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.input-form-modal:hover,
-.input-form-modal:focus {
-  border: 1px solid #4d5ae5;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.input-form-modal:hover + .form-icon,
-.input-form-modal:focus + .form-icon {
-  fill: #4d5ae5;
+.input-form-modal:hover,
+.input-form-modal:focus {
+  border-color: #4d5ae5;
 }
 
 .modal-lable {
@@ -652,7 +649,7 @@ padding: 0 24px;
   font-size: 12px;
   font-weight: 400;
   line-height: 1.17;
-  letter-spacing: 0.03em;
+  letter-spacing: 0.04em;
   color: #8e8f99;
   margin-bottom: 4px;
 }
@@ -661,68 +658,86 @@ padding: 0 24px;
 }
 .form-icon {
   position: absolute;
-  left: -126px;
+  left: 16px;
   top: 50%;
   transform: translateY(-50%);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.input-form-modal:hover + .form-icon,
+.input-form-modal:focus + .form-icon {
+  fill: #4d5ae5;
+}
+
+.modal-field-text {
+  margin-bottom: 16px;
+}
 .model-coment-text {
   width: 100%;
   height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   outline: transparent;
   background-color: transparent;
   padding: 8px 16px;
   resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.model-coment-text:hover,
+.model-coment-text:focus {
+  border-color: #4d5ae5;
+}
+.modal-field-chec {
+  margin-bottom: 24px;
+}
+
 .check-text {
   color: #8e8f99;
   font-size: 12px;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  display: flex;
-  align-items: center;
-  margin-top: 16px;
-  margin-bottom: 24px;
 }
-.check-text a {
+.link-privacy {
   color: #4d5ae5;
-  line-height: 1.33;
   text-decoration: underline;
-  margin-left: 8px;
 }
 .check-text span {
   width: 16px;
   height: 16px;
   border-radius: 2px;
   border: 1px solid rgba(46, 47, 66, 0.4);
-  margin-right: 8px;
-  display: flex;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
   align-items: center;
   justify-content: center;
-  fill: none;
+  fill: transparent;
 }
-
+/* !!!!!!!!!!!!!!!!!!!!!!!!!! */
 .check-input:checked + .check-text span {
   background-color: #404bbf;
   border: none;
+  fill: #f4f4fd;
 }
 
 .model-send-btn {
   display: block;
+  min-width: 169px;
+  height: 56px;
   color: #fff;
-  font-family: inherit;
+  font-family: "Roboto", sans-serif;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.04em;
   background-color: #4d5ae5;
-  border-radius: 4px;
   cursor: pointer;
   margin: 0 auto;
-  min-width: 169px;
-  height: 56px;
   border: none;
-  margin-top: 24px;
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
